--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
   },
   "devDependencies": {
     "@pandacss/dev": "^0.11.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "eslint-config-prettier": "^9.0.0",
-    "prettier": "^3.0.2"
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.0.2",
+    "prettier-plugin-organize-imports": "^3.2.3"
   }
 }
